WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292020
[WebGPU] fast/webgpu/nocrash/fuzz-275294.html crashes in Debug
https://bugs.webkit.org/show_bug.cgi?id=292020
Summary
[WebGPU] fast/webgpu/nocrash/fuzz-275294.html crashes in Debug
Mike Wyrzykowski
Reported
2025-04-24 12:28:53 PDT
[WebGPU] fast/webgpu/nocrash/fuzz-275294.html crashes in Debug
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-04-24 12:29:13 PDT
<
rdar://problem/149971001
>
Mike Wyrzykowski
Comment 2
2025-04-24 14:35:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44484
EWS
Comment 3
2025-04-30 02:49:00 PDT
Committed
294328@main
(4573a8d10364): <
https://commits.webkit.org/294328@main
> Reviewed commits have been landed. Closing PR #44484 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug